Add groups script at the beginning

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -1,6 +1,10 @@
+<%-
+  groups = OodSupport::User.new.groups.sort_by(&:id).tap { |groups|
+    groups.unshift(groups.delete(OodSupport::Process.group))
+  }.map(&:name).grep(/^P./)
+-%>
 ---
-cluster:
-  - SWC
+cluster: SWC
 form:
   - account
   - mode
